WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
68218
currentColor not supported in box-shadow and text-shadow
https://bugs.webkit.org/show_bug.cgi?id=68218
Summary
currentColor not supported in box-shadow and text-shadow
Lea Verou
Reported
2011-09-15 20:48:55 PDT
As the title mentions, Webkit seems to drop currentColor in both text-shadow and box-shadow. If you replace currentColor with red in the testcase, it works fine.
Attachments
Patch
(8.21 KB, patch)
2011-10-06 17:56 PDT
,
David Barr
no flags
Details
Formatted Diff
Diff
Patch
(8.19 KB, patch)
2011-10-06 22:47 PDT
,
David Barr
no flags
Details
Formatted Diff
Diff
Patch
(5.25 KB, patch)
2011-10-07 00:12 PDT
,
David Barr
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2011-09-16 00:38:02 PDT
Not sure how closely it's related, but see also:
bug 58730
.
Simon Fraser (smfr)
Comment 2
2011-09-16 08:43:02 PDT
I hate currentColor :(
David Barr
Comment 3
2011-10-05 20:45:51 PDT
Confirmed on Webkit
r96763
and Chrome 16.0.901.0 canary.
David Barr
Comment 4
2011-10-06 17:56:58 PDT
Created
attachment 110069
[details]
Patch
David Barr
Comment 5
2011-10-06 17:58:01 PDT
Comment on
attachment 110069
[details]
Patch This was a surprisingly straightforward fix. Pixel test included.
WebKit Review Bot
Comment 6
2011-10-06 22:05:25 PDT
Comment on
attachment 110069
[details]
Patch
Attachment 110069
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/10000089
New failing tests: fast/box-shadow/box-shadow-currentcolor.html
David Barr
Comment 7
2011-10-06 22:42:45 PDT
Comment on
attachment 110069
[details]
Patch Work around flakiness of ews-linux bot, particularly linux-xvfb.
David Barr
Comment 8
2011-10-06 22:47:05 PDT
Created
attachment 110091
[details]
Patch
David Barr
Comment 9
2011-10-06 22:49:14 PDT
Comment on
attachment 110091
[details]
Patch chromium-linux bots are green at this time, hopefully no cq- for me.
Simon Fraser (smfr)
Comment 10
2011-10-06 23:01:03 PDT
Comment on
attachment 110091
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=110091&action=review
> LayoutTests/fast/box-shadow/box-shadow-currentcolor.html:9 > + box-shadow: 0 10px 20px red;
It would be better to use a box-shadow with a big spread and no blur, to avoid platform differences in blurring code.
WebKit Review Bot
Comment 11
2011-10-06 23:12:44 PDT
Comment on
attachment 110091
[details]
Patch
Attachment 110091
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/10007120
New failing tests: fast/box-shadow/box-shadow-currentcolor.html
David Barr
Comment 12
2011-10-07 00:12:07 PDT
Created
attachment 110098
[details]
Patch
David Barr
Comment 13
2011-10-07 00:13:09 PDT
Comment on
attachment 110098
[details]
Patch Updated patch to use solid shadow to avoid platform differences.
WebKit Review Bot
Comment 14
2011-10-07 09:59:50 PDT
Comment on
attachment 110098
[details]
Patch Clearing flags on attachment: 110098 Committed
r96952
: <
http://trac.webkit.org/changeset/96952
>
WebKit Review Bot
Comment 15
2011-10-07 09:59:55 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug