Implement currentColor support for box-shadow and text-shadow https://bugs.webkit.org/show_bug.cgi?id=68218

Source/WebCore:

Patch by David Barr <davidbarr@chromium.org> on 2011-10-07
Reviewed by Simon Fraser.

Test: fast/box-shadow/box-shadow-currentcolor.html

* css/CSSParser.cpp:
(WebCore::CSSParser::parseShadow): Add CSSValueCurrentcolor to supported keywords.

LayoutTests:

Patch by David Barr <davidbarr@google.com> on 2011-10-07
Reviewed by Simon Fraser.

* fast/box-shadow/box-shadow-currentcolor-expected.png: Added.
* fast/box-shadow/box-shadow-currentcolor-expected.txt: Added.
* fast/box-shadow/box-shadow-currentcolor.html: Added.

Canonical link: https://commits.webkit.org/85706@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96952 268f45cc-cd09-0410-ab3c-d52691b4dbfc